# onnx-minimal-example

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
include/onnx_minimal/: Utils.h
src/: Utils.cpp  main.cpp  test.py
